WeaponComponent cleanup WIP

--- a/data/config.json
+++ b/data/config.json
@@ -4,7 +4,7 @@
 		"name": "revolver",
 		"fireRate": 20,
 		"reloadTime": 60,
-		"capacity": 6,
+		"maxBullets": 6,
 		"bulletSpeed": 6,
 		"bulletDamage": -2,
 		"bulletLife": 1,
@@ -20,7 +20,7 @@
 		"name": "machinegun",
 		"fireRate": 10,
 		"reloadTime": 80,
-		"capacity": 20,
+		"maxBullets": 20,
 		"bulletSpeed": 8,
 		"bulletDamage": -1,
 		"bulletLife": 1,
@@ -36,7 +36,7 @@
 		"name": "shotgun",
 		"fireRate": 0,
 		"reloadTime": 50,
-		"capacity": 2,
+		"maxBullets": 2,
 		"bulletSpeed": 4,
 		"bulletDamage": -1,
 		"bulletLife": 2,
@@ -52,7 +52,7 @@
 		"name": "mines",
 		"fireRate": 0,
 		"reloadTime": 120,
-		"capacity": 1,
+		"maxBullets": 1,
 		"bulletSpeed": 0,
 		"bulletDamage": 0,
 		"bulletLife": 1,
@@ -68,7 +68,7 @@
 		"name": "c4",
 		"fireRate": 0,
 		"reloadTime": 0,
-		"capacity": 1,
+		"maxBullets": 1,
 		"bulletSpeed": 0,
 		"bulletDamage": 0,
 		"bulletLife": -1,
@@ -84,7 +84,7 @@
 		"name": "rocket launcher",
 		"fireRate": 0,
 		"reloadTime": 100,
-		"capacity": 1,
+		"maxBullets": 1,
 		"bulletSpeed": 5,
 		"bulletDamage": -1,
 		"bulletLife": 1,
@@ -100,7 +100,7 @@
 		"name": "nuclear bomb",
 		"fireRate": 0,
 		"reloadTime": 0,
-		"capacity": 1,
+		"maxBullets": 1,
 		"bulletSpeed": 0,
 		"bulletDamage": 0,
 		"bulletLife": 0,
@@ -116,7 +116,7 @@
 		"name": "enemy weapon",
 		"fireRate": 100,
 		"reloadTime": 1,
-		"capacity": 1,
+		"maxBullets": 1,
 		"bulletSpeed": 6,
 		"bulletDamage": -1,
 		"bulletLife": 1,
@@ -132,13 +132,13 @@
 		"name": "boss weapon1",
 		"fireRate": 10,
 		"reloadTime": 1,
-		"capacity": 1,
+		"maxBullets": 1,
 		"bulletSpeed": 5,
 		"bulletDamage": -1,
 		"bulletLife": 1,
 		"bulletRange": 0,
 		"bulletSize": [ 10 ,10 ],
-		"numBullets": 3,
+		"bulletsPerShot": 3,
 		"isAutomatic": false,
 		"isExplossive": false,
 		"isBouncy": false,
@@ -149,13 +149,13 @@
 		"name": "boss weapon2",
 		"fireRate": 30,
 		"reloadTime": 1,
-		"capacity": 1,
+		"maxBullets": 1,
 		"bulletSpeed": 8,
 		"bulletDamage": -1,
 		"bulletLife": 1,
 		"bulletRange": 0,
 		"bulletSize": [ 10 ,10 ],
-		"numBullets": 10,
+		"bulletsPerShot": 10,
 		"isAutomatic": false,
 		"isExplossive": false,
 		"isBouncy": false,
