--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -34,6 +34,7 @@
     <ClInclude Include="..\src\components\AIFleeComponent.h" />
     <ClInclude Include="..\src\components\AIMeleeComponent.h" />
     <ClInclude Include="..\src\components\behavior_tree\actions\aim_player.h" />
+    <ClInclude Include="..\src\components\behavior_tree\actions\change_aim_direction.h" />
     <ClInclude Include="..\src\components\behavior_tree\actions\change_sprite.h" />
     <ClInclude Include="..\src\components\behavior_tree\actions\change_weapon.h" />
     <ClInclude Include="..\src\components\behavior_tree\actions\chase.h" />
@@ -118,6 +119,7 @@
     <ClCompile Include="..\src\components\AIFleeComponent.cpp" />
     <ClCompile Include="..\src\components\AIMeleeComponent.cpp" />
     <ClCompile Include="..\src\components\behavior_tree\actions\aim_player.cpp" />
+    <ClCompile Include="..\src\components\behavior_tree\actions\change_aim_direction.cpp" />
     <ClCompile Include="..\src\components\behavior_tree\actions\change_sprite.cpp" />
     <ClCompile Include="..\src\components\behavior_tree\actions\change_weapon.cpp" />
     <ClCompile Include="..\src\components\behavior_tree\actions\chase.cpp" />
