size and position in Entity and MovementComponent refactor

--- a/data/config.json
+++ b/data/config.json
@@ -5,7 +5,7 @@
 		"fireRate": 20,
 		"reloadTime": 60,
 		"maxBullets": 6,
-		"bulletSpeed": 6,
+		"bulletSpeed": 360.0,
 		"bulletDamage": -2,
 		"bulletLife": 1,
 		"bulletRange": 60,
@@ -21,7 +21,7 @@
 		"fireRate": 10,
 		"reloadTime": 80,
 		"maxBullets": 20,
-		"bulletSpeed": 8,
+		"bulletSpeed": 480.0,
 		"bulletDamage": -1,
 		"bulletLife": 1,
 		"bulletRange": 0,
@@ -37,7 +37,7 @@
 		"fireRate": 15,
 		"reloadTime": 50,
 		"maxBullets": 2,
-		"bulletSpeed": 4,
+		"bulletSpeed": 240.0,
 		"bulletDamage": -1,
 		"bulletLife": 2,
 		"bulletRange": 40,
@@ -53,7 +53,7 @@
 		"fireRate": 0,
 		"reloadTime": 120,
 		"maxBullets": 1,
-		"bulletSpeed": 0,
+		"bulletSpeed": 0.0,
 		"bulletDamage": 0,
 		"bulletLife": 1,
 		"bulletRange": 0,
@@ -69,7 +69,7 @@
 		"fireRate": 0,
 		"reloadTime": 0,
 		"maxBullets": 1,
-		"bulletSpeed": 0,
+		"bulletSpeed": 0.0,
 		"bulletDamage": 0,
 		"bulletLife": -1,
 		"bulletRange": 0,
@@ -85,7 +85,7 @@
 		"fireRate": 0,
 		"reloadTime": 100,
 		"maxBullets": 1,
-		"bulletSpeed": 5,
+		"bulletSpeed": 300.0,
 		"bulletDamage": -1,
 		"bulletLife": 1,
 		"bulletRange": 0,
@@ -101,7 +101,7 @@
 		"fireRate": 0,
 		"reloadTime": 0,
 		"maxBullets": 1,
-		"bulletSpeed": 0,
+		"bulletSpeed": 0.0,
 		"bulletDamage": 0,
 		"bulletLife": 0,
 		"bulletRange": 0,
@@ -117,7 +117,7 @@
 		"fireRate": -1,
 		"reloadTime": 1,
 		"maxBullets": 1,
-		"bulletSpeed": 6,
+		"bulletSpeed": 360.0,
 		"bulletDamage": -1,
 		"bulletLife": 1,
 		"bulletRange": 0,
@@ -133,7 +133,7 @@
 		"fireRate": 10,
 		"reloadTime": 1,
 		"maxBullets": 1,
-		"bulletSpeed": 5,
+		"bulletSpeed": 300.0,
 		"bulletDamage": -1,
 		"bulletLife": 1,
 		"bulletRange": 0,
@@ -150,7 +150,7 @@
 		"fireRate": 30,
 		"reloadTime": 1,
 		"maxBullets": 1,
-		"bulletSpeed": 8,
+		"bulletSpeed": 480.0,
 		"bulletDamage": -1,
 		"bulletLife": 1,
 		"bulletRange": 0,
@@ -168,50 +168,55 @@
 		"type": "melee",
 		"life": 1,
 		"invencibleTime": 10,
-		"speed": 3,
+		"speed": 180.0,
 		"collisionDamage": -1,
 		"size": [ 25 ,25 ],
-		"imageFile": "data/enemy.png"
+		"imageFile": "data/enemy.png",
+		"behaviorTree": "data/bt/melee_bt.xml"
 	},
 	{
 		"type": "big",
 		"life": 4,
 		"invencibleTime": 20,
-		"speed": 2,
+		"speed": 120.0,
 		"collisionDamage": -2,
 		"size": [ 35 ,35 ],
-		"imageFile": "data/bigEnemy.png"
+		"imageFile": "data/bigEnemy.png",
+		"behaviorTree": "data/bt/melee_bt.xml"
 	},
 	{
 		"type": "range",
 		"life": 1,
 		"invencibleTime": 10,
-		"speed": 2,
+		"speed": 120.0,
 		"collisionDamage": -1,
 		"weapon": "enemy weapon",
 		"size": [ 25 ,25 ],
-		"imageFile": "data/rangeEnemy.png"
+		"imageFile": "data/rangeEnemy.png",
+		"behaviorTree": "data/bt/range_bt.xml"
 	},
 	{
 		"type": "turret",
 		"life": 3,
 		"invencibleTime": 10,
-		"speed": 2,
+		"speed": 120.0,
 		"collisionDamage": -1,
 		"weapon": "enemy weapon",
 		"size": [ 25 ,25 ],
-		"imageFile": "data/turret.png"
+		"imageFile": "data/turret.png",
+		"behaviorTree": "data/bt/turret_bt.xml"
 	}
 	,
 	{
 		"type": "boss",
 		"life": 40,
 		"invencibleTime": 20,
-		"speed": 2,
+		"speed": 120.0,
 		"collisionDamage": -2,
 		"weapon": "boss weapon1",
 		"size": [ 90 ,74 ],
-		"imageFile": "data/boss.png"
+		"imageFile": "data/boss.png",
+		"behaviorTree": "data/bt/boss_bt.xml"
 	}
 	],
 	"pickups": [ "revolver", "machinegun", "shotgun", "mines", "c4", "rocket launcher", "nuclear bomb" ]
