gotoplayer option to keep following and explossion fix

--- a/data/config.json
+++ b/data/config.json
@@ -115,14 +115,14 @@
 	{
 		"name": "enemy weapon",
 		"fireRate": -1,
-		"reloadTime": 1,
-		"maxBullets": 1,
+		"reloadTime": -1,
+		"maxBullets": -1,
 		"bulletSpeed": 360.0,
 		"bulletDamage": -1,
 		"bulletLife": 1,
 		"bulletRange": 0,
 		"bulletSize": [ 10 ,10 ],
-		"isAutomatic": true,
+		"isAutomatic": false,
 		"isExplossive": false,
 		"isBouncy": false,
 		"imageFile": "data/bullet.png",
@@ -130,9 +130,9 @@
 	},
 	{
 		"name": "boss weapon1",
-		"fireRate": 10,
-		"reloadTime": 1,
-		"maxBullets": 1,
+		"fireRate": -1,
+		"reloadTime": -1,
+		"maxBullets": -1,
 		"bulletSpeed": 300.0,
 		"bulletDamage": -1,
 		"bulletLife": 1,
@@ -147,9 +147,9 @@
 	},
 	{
 		"name": "boss weapon2",
-		"fireRate": 30,
-		"reloadTime": 1,
-		"maxBullets": 1,
+		"fireRate": -1,
+		"reloadTime": -1,
+		"maxBullets": -1,
 		"bulletSpeed": 480.0,
 		"bulletDamage": -1,
 		"bulletLife": 1,
