--- a/project/dead_line_revenge.vcxproj.filters
+++ b/project/dead_line_revenge.vcxproj.filters
@@ -291,6 +291,9 @@
     <ClInclude Include="..\src\components\behavior_tree\actions\change_aim_direction.h">
       <Filter>src\components\behavior_tree\actions</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\components\behavior_tree\actions\change_speed.h">
+      <Filter>src\components\behavior_tree\actions</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
@@ -516,6 +519,9 @@
       <Filter>src\components</Filter>
     </ClCompile>
     <ClCompile Include="..\src\components\behavior_tree\actions\change_aim_direction.cpp">
+      <Filter>src\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\components\behavior_tree\actions\change_speed.cpp">
       <Filter>src\components\behavior_tree\actions</Filter>
     </ClCompile>
   </ItemGroup>
