--- a/project/dead_line_revenge.vcxproj.filters
+++ b/project/dead_line_revenge.vcxproj.filters
@@ -294,6 +294,9 @@
     <ClInclude Include="..\src\components\behavior_tree\actions\change_speed.h">
       <Filter>src\components\behavior_tree\actions</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\components\behavior_tree\actions\GoToBlackboardPositionAction.h">
+      <Filter>src\components\behavior_tree\actions</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
@@ -522,6 +525,9 @@
       <Filter>src\components\behavior_tree\actions</Filter>
     </ClCompile>
     <ClCompile Include="..\src\components\behavior_tree\actions\change_speed.cpp">
+      <Filter>src\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\components\behavior_tree\actions\GoToBlackboardPositionAction.cpp">
       <Filter>src\components\behavior_tree\actions</Filter>
     </ClCompile>
   </ItemGroup>
